# TigerEx-

./: .env.example  .env.tigerex-template  .eslintrc.json  .gitignore  .prettierrc  2fa-reset.html  ADMIN_FEATURES_IMPLEMENTATION.md  ADMIN_GUIDE. md  ADMIN_GUIDE.md  ADMIN_UIDE.md  ADMIN_USER_RIGHTS_COMPARISON.md  API_DOCUMENTATION.md  API_DOCUMENTATION_COMPLETE.md  API_DOCUMENTATION_COMPREHENSIVE.md  AUDIT_COMPLETION_SUMMARY.md  BACKEND_ANALYSIS_REPORT.md  BRANCH_COMPARISON_v7.0.0.md  BUILD.md  BUILD_DEPLOY_GUIDE.md  BUILD_GUIDE.md  CEX_DEX_P2P_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_2025.md  CODE_QUALITY_IMPROVEMENTS.md  COIN_MANAGEMENT_README.md  COMPARISON.md  COMPETITOR_COMPARISON_REPORT.md  COMPETITOR_FEATURE_ANALYSIS.md  COMPLETE_API_DOCUMENTATION.md  COMPLETE_FEATURES.md  COMPLETE_FEATURES_OUTLINE.md  COMPLETE_FEATURES_UPDATE_2025.md  COMPLETE_FEATURE_COMPARISON.md  COMPLETE_FETCHERS_DOCUMENTATION.md  COMPLETE_FINAL_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_OCT_2025.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PLATFORM_CAPABILITIES.md  (+423 more)
.idx/: dev.nix
.mentat/: README.md  format.sh  precommit.sh  setup.sh
.next/: trace
2fa-reset-verification/: README.md  index.html
2fa-reset-verification-service/: main.py  requirements.txt
admin/: complete_admin_dashboard_full_control.html  enhanced_admin_dashboard.tsx
admin-panel/: README.md  package.json
advanced-risk-management-service/: main.py
assets/: README.md
backend/: README_BACKEND.md  admin-control-template.py  admin_dashboard_complete.py  complete-api.js  complete-backend-v3.js  complete_admin_dashboard.py  complete_api_gateway_streaming.py  complete_backend_services_system.py  complete_trading_platform.py  comprehensive_admin_control_system.py  consolidate_services.py  enhanced_backend_services_complete.py  enhanced_trading_interface.py  enhanced_user_access_system.py  find_duplicates.py  microservices_complete_trading_system.py  remove_duplicates.sh  server.js  trading-engine.js  unified_admin_dashboard.py
backend/advanced-trading-engine/: CMakeLists.txt  main.py  requirements.txt
backend/advanced-trading-engine/admin/: admin_routes.py
backend/advanced-trading-engine/src/: main.cpp  main.py
backend/core-engine/: Cargo.toml  main.py
backend/core-engine/src/: admin.rs  api.rs  auth.rs  cache.rs  db.rs  engine.rs  main.rs  matching.rs  models.rs  orderbook.rs  risk.rs  utils.rs  websocket.rs
backend/derivatives-engine/: Cargo.toml  Dockerfile  README.md  server.js
backend/derivatives-engine/admin/: admin_routes.py
backend/derivatives-engine/src/: main.py  main.rs
backend/enhanced-liquidity-aggregator/: Cargo.toml  Dockerfile  README.md  main.py  server.js
backend/enhanced-liquidity-aggregator/admin/: admin_routes.py
backend/enhanced-liquidity-aggregator/src/: exchange_connectors.rs  main.rs  main_enhanced.rs
backend/enhanced-liquidity-aggregator/src/exchange_connectors/: enhanced_okx.rs
backend/fix-protocol-engine/: Cargo.toml
backend/fix-protocol-engine/src/: admin.rs  engine.rs  fix.rs  main.rs  messages.rs  session.rs
backend/high-speed-trading-engine/: CMakeLists.txt  Dockerfile
backend/high-speed-trading-engine/include/: matching_engine.hpp
backend/high-speed-trading-engine/src/: main.cpp  matching_engine.cpp
backend/liquidity-aggregator/: Cargo.toml  Dockerfile  README.md  consolidated_main.py  server.js
backend/liquidity-aggregator/admin/: admin_routes.py
backend/liquidity-aggregator/src/: main.rs
backend/matching-engine/: CMakeLists.txt  Dockerfile  README.md  main.py
backend/matching-engine/admin/: admin_routes.py
backend/matching-engine/src/: main.cpp  main.py
backend/multi-language-services/cpp-matching-engine/: CMakeLists.txt
backend/multi-language-services/cpp-matching-engine/src/: main.cpp
backend/multi-language-services/rust-order-matching/: Cargo.toml
backend/multi-language-services/rust-order-matching/src/: main.rs
backend/rust-performance-engine/: Cargo.toml  main.rs
backend/rust-performance-engine/src/: main.rs
backend/rust_performance_core/: Cargo.toml  main.rs
backend/rust_performance_core/src/: main.rs
backend/spot-trading/: CONSOLIDATED_README.md  CONSOLIDATION_MANIFEST.json  Cargo.toml  package.json  server.js
backend/spot-trading/admin/: admin_routes.py  comprehensive_admin_controls.py  enhanced_admin_routes.py
backend/spot-trading/consolidated/advanced-trading-engine/: Dockerfile  README.md
backend/spot-trading/consolidated/advanced-trading-engine/src/: main.cpp  main.py
backend/spot-trading/consolidated/advanced-trading-service/src/: main.py
backend/spot-trading/consolidated/trading/: main.py
backend/spot-trading/consolidated/trading-engine-enhanced/: main.py
backend/spot-trading/src/: handlers.rs  main.rs  models.rs  server.js  services.rs  websocket.rs
backend/spot-trading/src/middleware/: auth.js  validation.js
backend/spot-trading/src/models/: Order.js  Trade.js
backend/spot-trading/src/routes/: orderRoutes.js  tradingRoutes.js
backend/spot-trading/src/services/: OrderBookService.js  TradingEngine.js
backend/spread-arbitrage-bot/: Cargo.toml  Dockerfile  README.md  server.js
backend/spread-arbitrage-bot/admin/: admin_routes.py
backend/spread-arbitrage-bot/src/: main.rs
backend/trading-engine/: CMakeLists.txt  Dockerfile  README.md  consolidated_main.py  main.cpp  requirements.txt
backend/trading-engine/admin/: admin_routes.py
backend/trading-engine/src/: main.py
backend/transaction-engine/: Cargo.toml  Dockerfile  README.md  server.js
backend/transaction-engine/admin/: __init__.py  admin_routes.py
backend/transaction-engine/src/: main.rs
blockchain/: blockchain_integration_solidity.sol
bots/: requirements.txt
client/: index.html  package.json
coin-data/: data.json  database_schema.sql
consolidated_docs/: DEPLOYMENT.md  IMPLEMENTATION.md
custom-blockchain/: blockchain_node.py  requirements.txt
custom-database/: .env.example  README.md  config.env  config.py  schema.sql
custom-exchange/: README.md
(+3566 files in other folders)
