[package]
name = "tigerex-core-engine"
version = "1.0.0"
edition = "2021"
authors = ["TigerEx Team"]
description = "High-performance trading engine for TigerEx"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
hyper = { version = "1.1", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "decimal", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.33"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
jwt = "0.16"
bcrypt = "0.15"
config = "0.14"
once_cell = "1.19"
prometheus = "0.13"
lazy_static = "1.4"
bytes = "1.5"
prost = "0.12"
tonic = "0.10"
rdkafka = { version = "0.4", features = ["cmake-build"] }
lapin = "2.3"
deadpool = "0.10"
deadpool-redis = "0.14"
deadpool-postgres = "0.12"
refinery = { version = "0.8", features = ["tokio-postgres"] }

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "tigerex-engine"
path = "src/main.rs"