[package]
name = "enhanced-liquidity-aggregator"
version = "2.0.0"
edition = "2021"
description = "Enhanced TigerEx Multi-Exchange Liquidity Aggregator with comprehensive market support"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Decimal math
num-traits = "0.2"

# Async runtime utilities
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"