[package]
name = "fix-protocol-engine"
version = "0.1.0"
edition = "2021"
description = "FIX 4.4/5.0 protocol engine for institutional trading"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
ring = "0.17"
base64 = "0.21"
hex = "0.4"
crc = "3.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"