[package]
name = "tigerex-liquidity-aggregator"
version = "1.0.0"
edition = "2021"
authors = ["TigerEx Team <dev@tigerex.com>"]
description = "High-performance liquidity aggregator for TigerEx hybrid exchange"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
kafka = "0.10"
ccxt = "0.1"
web3 = "0.19"
ethers = "2.0"
bincode = "1.3"
dashmap = "5.5"
once_cell = "1.19"
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"