[package]
name = "rust-order-matching"
version = "0.1.0"
edition = "2021"
authors = ["TigerEx Team <team@tigerex.io>"]
description = "High-performance order matching engine for TigerEx"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true[dependencies]
wallet = "24-word seed"
# TigerEx Wallet API - Multi-chain
# chains: ETH, BTC, TRX, BNB
# ownership: USER_OWNS
